fixed slugging map view, invisible help window

--- a/static/css/code.css
+++ b/static/css/code.css
@@ -4,7 +4,6 @@
   width: 400px ;
   top: 0 ;
   bottom: 0 ;
-  overflow: hidden ;
 }
 
 .editor-view,#editor-view {
